# marching-squares

./: .clang-format  CMakeLists.txt
include/: DEMParser.ipp  Record.hpp
marching_squares/: .clang-format  .gitignore  CMakeLists.txt
marching_squares/src/: main.cpp
src/: DEMParser.cpp  DEMParser.ipp  Record.cpp  Record.hpp  main.cpp
src/test/: Record.test.cpp  main.cpp
terrain/: test.dem  test_big.dem
